MET-7164 New pid support for mongo.
Backwards compatible for reindex

# Conflicts:
#	corelib-storage/src/main/java/eu/europeana/corelib/edm/utils/EdmUtils.java